resources/css/smartguide/base.css
/* ... */
table.uploads-render > tbody > tr {
	vertical-align: top;
	border-bottom: 1px lightgray solid;
}

table.uploads-render > tbody > tr:last-child {
	border-bottom: 0px;
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
}

div.uploads-render .panel-body {
	padding: 0px;
}

div.repeat table td {
	padding: 5px;
}

table.dataTable td {
	padding: 5px;
}

.table > thead > tr > td {
	vertical-align: bottom;
	border-bottom: 2px solid #ddd;
}

table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td.dtr-control:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th.dtr-control:before {
	left: -10px;
}

table.dataTable thead tr th, table.dataTable thead tr td {
	padding: 5px;
	border-bottom: 1px solid #111;
}

div.repeat:not(.grid-view) table {
	border-collapse: collapse!important;
}

div.repeat table td.repeatbutton {
	text-align: center;
	vertical-align: middle;
	padding-left: 10px;
	padding-right: 10px;
}

.nowrap {
	white-space: nowrap;
}

.modal-xl {
	width: 1200px;
}

.panel .repeatinstance {
	margin: 15px;
	border: 1px #8e8e8e solid;
	border-radius: 3px;
}

.plain-group .panel-body {
	padding:0px!important;
}

.datatable-search {
	margin-right: 15px;
}

.modal-body {
	max-height: calc(100vh - 150px);
	overflow-y: auto;
}

.plain-group .panel-body {
	padding: 0px !important;
}

.plain-group {
	border: 0px !important;
}

/* remove margin for panels inside panels */
.panel:not(.panel-borderless) .panel {
	/* margin-bottom: 0px !important; */
}

.panel-borderless {
	border	   : 0 !important;
	box-shadow   : none !important;
	margin-left  : -15px;
	margin-right : -15px;
	margin-top   : 0px;
	margin-bottom: 0px !important;
}

.panel-borderless .panel-heading {
	background: #fff;
	border-width: 0px;
}

.panel-heading .btn-sm {
	margin-top: -7px;
}

.table-td:first-child {
	padding-left: 0px;
	padding-right: 5px;
}

.table-td:last-child {
	padding-left: 5px;
	padding-right: 0px;
}

.table-td {
	padding-left: 5px;
	padding-right: 5px;
}

table.uploads-render tr td {
	padding: 15px !important;
}

.table td:last-child {
	width:-webkit-fill-available;
}

.margin-0 {
	margin: 0px;
}

.emptyLegend {
	font-size	: inherit;
	border-bottom: 0;
	display	  : none;
	visibility   : hidden;
}

.footnote {
	font-size: x-small;
}

.locale-picker {
	margin-top: 8px;
}

.lang-picker {
	text-align: center;
}
/* Buttons - start */
.btn {
	min-width: 44px;
	min-height: 20px !important;
}

.btn.pull-right {
	/* margin-right: 5px; */
}

.btn-link {
	text-align: left;
}

.btn-breadcrumb {
	padding-left: 0px !important;
	padding-right: 0px !important;
}

/* xsmall button patch */
.btn-xs {
	min-height: 15px;
}

/* xlarge button - start */
.btn-xlarge {
	padding		 : 15px 20px !important;
	font-size	   : 20px !important;
	border-radius   : 6px;
	margin		  : 5px;
	background-color: #ddd;
}

.btn-xlarge.btn-primary {
	background-color: #337ab7;
}

.btn-xlarge.btn-success {
	background-color: #5cb85c;
}

.btn-toolbar.text-center {
	display: flex;
	justify-content: center;
}

.btn-toolbar.text-right {
	display: flex;
	justify-content: flex-end;
}

.btn-toolbar.text-left {
	display: flex;
	justify-content: flex-start;
}

/* Buttons in a no-col span */
.no-col button {
	margin-left: 5px;
	margin-top: 5px;
}

.no-col button.pull-left {
	margin-right: 5px;
	margin-top: 5px;
	margin-left: 0px !important;
}
/* Buttons - end */

/* Radio & Checkbox - Adjust + Inline */
.checkbox {
	margin-top : 5px;
	margin-left: 15px;
}

.radio {
	margin-top : 5px;
	margin-left: 15px;
}

ul.chkbxrdio-grp li {
	list-style: none;
}

tr label .large-radio, tr label .large-checkbox {
	padding-top: 0px;
	padding-bottom: 0px;
}
tr .checkbox, tr .radio {
	margin-top: 0px;
	margin-bottom: 0px;
}



/* Password */
input[type="password"] {
	width: 100% !important;
}

.radio-inline,
.checkbox-inline {
	display: inline-block;
}

.radio-inline > ul,
.checkbox-inline > ul{
	padding-left: 25px;
}

.radio-inline > li,
.checkbox-inline > li {
	display: inline-block;
}

.chkbxrdio-grp ul {
	margin-left: 0px;
	padding-left: 0px;
}

.chkbxrdio-grp li {
	list-style: none;
}

.chkbxrdio-grp label {
	margin-right: 5px;
}

.chkbxrdio-grp ul li label {
	margin-left: 5px;
	margin-right: 5px;
	display: inline;
}


.chkbxrdio-grp ul.large-checkbox li label, .chkbxrdio-grp ul.large-radio li label {
	margin-left: 5px;
	margin-right: 5px;
}

/* Large Checkbox/Radio Start */
.large-checkbox label, .large-radio label {
	display: inline-block;
	font-weight: initial;
	margin-left: 5px;
	margin-right: 5px;
}

input[type="checkbox"].large-checkbox, input[type="radio"].large-radio {
	-webkit-appearance: none;
	width			 : 23px;
	height			: 23px;
	background		: white;
	border-radius	 : 4px;
	border-top		: 2px solid #aaa;
	border-bottom	 : 2px solid #aaa;
	border-left	   : 2px solid #aaa;
	border-right	  : 2px solid #aaa;
	vertical-align	: middle;
	margin-top		: 0px;
	padding-left	  : 0px;
}

input[type="checkbox"].large-checkbox:hover, input[type="radio"].large-radio:hover {
	border-bottom: 2px solid #929496;
	border-right: 2px solid #929496;
}

/* Large Checkbox Start */
input[type="checkbox"].large-checkbox:checked::before {
	font-family  : "Font Awesome 5 Free";
	font-weight  : 900;
	font-size	: 16px;
	content	  : "\f00c";
	color		: #555;
}

input[type="checkbox"].large-checkbox:indeterminate::before {
	font-family  : "Font Awesome 5 Free";
	font-weight  : 900;
	font-size	: 16px;
	content	  : "\f068";
	color		: #555;
}
/* Large Checkbox - End */

/* Large Radio - Start */
input[type="radio"].large-radio {
	border-radius	 : 100px;
}

input[type="radio"].large-radio:checked::before {
	font-family : "Font Awesome 5 Free";
	font-weight : 900;
	font-size   : 14px;
	content	 : "\f111";
	color	   : #555;
	/* position	 : absolute; will break if overflow: scroll*/
	/* padding-left: 3px; */
	/* padding-top : 3px; */
}
/* Large-Radio - End */

/* File Upload */
.btn-file {
	position: relative;
	overflow: hidden;
}
/* ... */

